# uuv_trajectory_planner

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  web.py
config/: default.yaml
examples/: coverage_scenario.json  general_scenario.json  rolling_scenario.json
tests/: test_chat_parser.py  test_coverage_planning.py  test_detection_parser.py  test_general_planning.py  test_llm_client.py  test_rolling_planner.py  test_simulation.py  test_sonar.py  test_web_validation.py
uuv_trajectory_planner/: __init__.py  animation.py  config.py  main.py  reporting.py  visualization.py  web_server.py
uuv_trajectory_planner/core/: __init__.py  chat_parser.py  detection_parser.py  llm_client.py  memory_manager.py  react_engine.py  rolling_planner.py  sonar_recognizer.py  sonar_simulator.py
uuv_trajectory_planner/models/: __init__.py  constraints.py  decision_output.py  situation_awareness.py
uuv_trajectory_planner/planners/: __init__.py  coverage_planner.py  general_planner.py  utils.py
uuv_trajectory_planner/simulation/: __init__.py  runner.py  scenarios.py  simulator.py  visualization.py
uuv_trajectory_planner/web/: app.js  index.html  styles.css
