[project]
name = "uuv-trajectory-planner"
version = "0.1.0"
description = "MVP for a ReAct-style UUV trajectory planning agent"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "shapely>=2.0",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.8", "pylint>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pylint.main]
disable = ["missing-module-docstring"]
